--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <h1>royniks</h1>
 
-    <img src="pictures/old-house.jpg" alt="Old House" class="main-image">
+    <img src="pictures/paint2.jpg" alt="Old House" class="main-image">
 <div id="live-clock">Kolkata :: Loading...</div>
   <div id="welcome-msg">Welcome</div>
 
