--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - royniks</title>
     <style>
         /* This CSS ensures the menu stays at the very top */
