--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
     <main class="content">
         <h1>About Me</h1>
         <p>I’m Nikhil, a 17-year-old student currently studying in Class 12.</p>
-        <p>I’m deeply interested in technology and enjoy exploring how things work whether it’s software, tools, or systems. I plan to pursue engineering for my higher studies and am actively preparing to get into an engineering college.</p>
+        <p>I’m deeply interested in technology and enjoy exploring how things work whether it’s software, tools, or systems. I plan to pursue engineering for my higher studies and am actively preparing to pursue engineering at a university.</p>
         <p>When I’m not studying, I’m usually watching movies or pushing myself to replace screen time with a book. I’m still figuring out the "big picture" for my future, but for now, I’m focused on the next step.</p>
     </main>
 
